trunk/OldArchive/113fd6df50e8c859e87d52a633a8407c-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:12:38: error: invalid initialization of non-const reference of type 'int&' from an rvalue of type 'int'
     decltype(func(std::declval<int>())) x = func(i);
                                      ^
main.cpp:4:5: error: in passing argument 1 of 'int func(int&)'
 int func(int& i) {
     ^
main.cpp:12:38: error: invalid initialization of non-const reference of type 'int&' from an rvalue of type 'int'
     decltype(func(std::declval<int>())) x = func(i);
                                      ^
main.cpp:4:5: error: in passing argument 1 of 'int func(int&)'
 int func(int& i) {
     ^
main.cpp:12:43: error: invalid type in declaration before '=' token
     decltype(func(std::declval<int>())) x = func(i);
                                           ^
